--- a/styleguide.html
+++ b/styleguide.html
@@ -1,1 +1,28 @@
-html code here
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Styleguide</title>
+</head>
+<body>
+    <h1>Blog Post Teaser</h1>
+    <div class="container blog-teaser">
+        <div class="row">
+            <div class="col-12"
+                <p>insertHTML here</p>
+        </div>
+    </div>
+    <br>
+    <h1>Blog Post</h1>
+    <div class="container blog-post">
+        <div class="row">
+            <div class="col-12">
+                <P>Insert HTML here</P>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
