--- a/styleguide.html
+++ b/styleguide.html
@@ -23,6 +23,15 @@
             </div>
         </div>
     </div>
+    
+    <h1>Contact Card</h1>
+    <div class=”container contact-card-wrapper”>
+	<div class=”row”>
+		<div class=”col-12”
+			<your HTML elements>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
