--- a/contactcard.html
+++ b/contactcard.html
@@ -8,13 +8,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <style>
-    body {
-        background-image: url('https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60');
-        background-size: cover;
-        }
+
 </style>
 </head>
 <body>
+    <img class="bg-img"  src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60" alt="background gradient" style= "width: 100%;">
     <div class="position-absolute top-50 start-50 translate-middle">
         <div class="icons mb-4 text-center" style="font-size: 80px;">
             <a href="https://github.com/JTSTAM02" target="_blank" fill="currentColor"><i class="bi bi-github"></i></a>
@@ -25,5 +23,6 @@
       <img src="https://media.licdn.com/dms/image/D5603AQEKxeHMvOj-eQ/profile-displayphoto-shrink_400_400/0/1686849204210?e=1692230400&v=beta&t=wqcLR9LqZqLzRJ3iI7ltv7JaOKXpFiXQqnaDz59_k4o" alt="John Tyler Stamm" class="rounded-circle img-fluid">
       <h2 class="text-center mt-4">Tyler Stamm</h2>
     </div>
+
 </body>
 </html>
