--- a/contactcard.html
+++ b/contactcard.html
@@ -12,7 +12,7 @@
 </style>
 </head>
 <body>
-    <img class="bg-img"  src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60" alt="background gradient" style= "width: 100%;">
+    <img class="bg-img"  src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60" alt="background gradient" style= "width: 100%; height: 2000px;">
     <div class="position-absolute top-50 start-50 translate-middle">
         <div class="icons mb-4 text-center" style="font-size: 80px;">
             <a href="https://github.com/JTSTAM02" target="_blank" fill="currentColor"><i class="bi bi-github"></i></a>
