--- a/contactcard.html
+++ b/contactcard.html
@@ -18,7 +18,7 @@
             <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
         </div>
       <img src="https://media.licdn.com/dms/image/D5603AQEKxeHMvOj-eQ/profile-displayphoto-shrink_400_400/0/1686849204210?e=1692230400&v=beta&t=wqcLR9LqZqLzRJ3iI7ltv7JaOKXpFiXQqnaDz59_k4o" alt="John Tyler Stamm" class="rounded-circle img-fluid">
-      <h2 class="text-center mt-4">Tyler Stamm</h2>
+      <h2 class="text-center mt-4" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 80px;">Tyler Stamm</h2>
     </div>
 
 </body>
