--- a/contactcard.html
+++ b/contactcard.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-    <img class="bg-img"  src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60" alt="background gradient" style= "width: 100%; height: 2000px;">
+    <img class="bg-img"  src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU" alt="background gradient" style= "width: 100%; height: 2000px;">
     <div class="position-absolute top-50 start-50 translate-middle">
         <div class="icons mb-4 text-center" style="font-size: 80px;">
             <a href="https://github.com/JTSTAM02" target="_blank" fill="currentColor"><i class="bi bi-github"></i></a>
