--- a/contactcard.html
+++ b/contactcard.html
@@ -7,6 +7,19 @@
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <style>
+        .btn-primary {
+            color: #fff;
+            background-color: aliceblue;
+        }
+
+        .btn-primary:hover, .btn-primary:focus {
+            color: #fff;
+            background-color: aliceblue;
+        }
+
+
+    </style>
 </head>
 <body>
     <img class="bg-img"  src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60" alt="background gradient" style= "width: 100%; height: 2000px;">
@@ -17,9 +30,10 @@
             <a href="https://www.linkedin.com/in/john-tyler-stamm/" target="_blank" fill="currentColor"><i class="bi bi-linkedin"></i></a>
             <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
         </div>
+        <div class=".btn-primary">
           <img src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU" alt="John Tyler Stamm" class="rounded-circle img-fluid">
-        <h2 class="text-center mt-2" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 75px;">Tyler Stamm</h2>
+        </div>
+          <h2 class="text-center mt-2" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 75px;">Tyler Stamm</h2>
     </div>
 </body>
 </html>
-
