--- a/contactcard.html
+++ b/contactcard.html
@@ -9,15 +9,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
         .btn-primary {
-            color: #fff;
-            background-color: aliceblue;
+            color: black;
         }
 
-        .btn-primary:hover, .btn-primary:focus {
-            color: #fff;
-            background-color: aliceblue;
+        .btn-primary::after {
+            content: "Let's Connect!";
+            color: rgb(52, 52, 245, 0.9);
+            background-color: rgb(135, 239, 135);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
+            top: 52%;
+            left: 50%;
+            opacity: 0;
+            width: 100%;
+            height: 450px;
+            text-align: center;
+            justify-content: center;
+            font-size: 80px;
+            transition: opacity 0.3s ease;
+            align-items: center;
+            display: flex;
+
         }
 
+        .btn-primary:hover::after {
+            opacity: 0.9;
+        }
 
     </style>
 </head>
@@ -30,7 +48,7 @@
             <a href="https://www.linkedin.com/in/john-tyler-stamm/" target="_blank" fill="currentColor"><i class="bi bi-linkedin"></i></a>
             <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
         </div>
-        <div class=".btn-primary">
+        <div class="btn-primary">
           <img src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU" alt="John Tyler Stamm" class="rounded-circle img-fluid">
         </div>
           <h2 class="text-center mt-2" style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 75px;">Tyler Stamm</h2>
