--- a/contactcard.html
+++ b/contactcard.html
@@ -35,6 +35,9 @@
             <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
         </div>
     </div>
+    <script>const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
 </body>
 
 </html>
