--- a/index.html
+++ b/index.html
@@ -1,18 +1,93 @@
-<<<<<<< HEAD
-Hello World
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog HomePage</title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
-    <link rel="stylesheet" href="CSS/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Tyler Stamm - Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-    <p>Hello</p>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#home">Tyler Stamm</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#about">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#blogs">Blogs</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <a href="https://www.linkedin.com/in/john-tyler-stamm/" target="_blank" fill="currentColor"><i
+          class="bi bi-linkedin"></i></a>
+  <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
+  <section id="home" class="bg-primary text-white text-center py-5">
+    <div class="container">
+      <h1>Welcome to My Portfolio</h1>
+      <h1>Tyler Stamm <br> Software Developer</h1>
+      <div class="row justify-content-center">
+        <div class="col-md-5">
+          <a href="https://github.com/JTSTAM02" target="_blank" class="btn btn-light btn-lg m-1">
+            <i class="bi bi-github"></i> GitHub
+          </a>
+          <a href="https://www.linkedin.com/in/john-tyler-stamm/" target="_blank" class="btn btn-light btn-lg m-1">
+            <i class="bi bi-linkedin"></i> LinkedIn
+          </a>
+          <a href="mailto:tyler.stamm1313@gmail.com" class="btn btn-light btn-lg m-1">
+            <i class="bi bi-envelope"></i> Email
+          </a>
+          <a href="tel:+1234567890" class="btn btn-light btn-lg m-1">
+            <i class="bi bi-phone"></i> Phone
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="blog" class="bg-light py-5">
+    <div class="container">
+      <h2 class="text-center mb-4">My Latest Blog Posts</h2>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card">
+            <img src="blog-post-1.jpg" class="card-img-top" alt="Blog Post 1">
+            <div class="card-body">
+              <h5 class="card-title">Blog Post 1</h5>
+              <p class="card-text">Click here to learn about my first week of Bootcamp.</p>
+              <a href="blog-post-1.html" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card">
+            <img src="blog-post-2.jpg" class="card-img-top" alt="Blog Post 2">
+            <div class="card-body">
+              <h5 class="card-title">Blog Post 2</h5>
+              <p class="card-text">When the going gets tough, the tough get going.</p>
+              <a href="blog-post-2.html" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
 </body>
 </html>
->>>>>>> refs/remotes/origin/main
+
