--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Tyler Stamm - Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="landingpage.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#home">Tyler Stamm</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,13 +32,13 @@
       </div>
     </div>
   </nav>
-  <a href="https://www.linkedin.com/in/john-tyler-stamm/" target="_blank" fill="currentColor"><i
-          class="bi bi-linkedin"></i></a>
-  <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
-  <section id="home" class="bg-primary text-white text-center py-5">
+
+  <section id="home" class="text-white text-center py-5 mt-5">
     <div class="container">
-      <h1>Welcome to My Portfolio</h1>
-      <h1>Tyler Stamm <br> Software Developer</h1>
+        <img src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU"
+        alt="John Tyler Stamm" 
+        class="rounded-circle img-fluid ">
+        <h1>Tyler Stamm: Software Developer</h1>
       <div class="row justify-content-center">
         <div class="col-md-5">
           <a href="https://github.com/JTSTAM02" target="_blank" class="btn btn-light btn-lg m-1">
@@ -54,34 +54,57 @@
             <i class="bi bi-phone"></i> Phone
           </a>
         </div>
-      </div>
+      </div>       
     </div>
   </section>
 
-  <section id="blog" class="bg-light py-5">
+  <section id="blog" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-4">My Latest Blog Posts</h2>
+      <h2 class="text-center mb-4">My Blog Posts</h2>
       <div class="row">
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
-            <img src="blog-post-1.jpg" class="card-img-top" alt="Blog Post 1">
+            <img src="" class="card-img-top" alt="Blog Post #1">
             <div class="card-body">
-              <h5 class="card-title">Blog Post 1</h5>
+              <h5 class="card-title">Blog #1</h5>
               <p class="card-text">Click here to learn about my first week of Bootcamp.</p>
-              <a href="blog-post-1.html" class="btn btn-primary">Read More</a>
+              <a href="" class="btn btn-primary">Read More</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
-            <img src="blog-post-2.jpg" class="card-img-top" alt="Blog Post 2">
+            <img src="" class="card-img-top" alt="Blog Post #2">
             <div class="card-body">
-              <h5 class="card-title">Blog Post 2</h5>
+              <h5 class="card-title">Blog Post #2</h5>
               <p class="card-text">When the going gets tough, the tough get going.</p>
-              <a href="blog-post-2.html" class="btn btn-primary">Read More</a>
+              <a href="" class="btn btn-primary">Read More</a>
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <img src="" class="card-img-top" alt="Blog Post 3">
+              <div class="card-body">
+                <h5 class="card-title">Blog Post #3</h5>
+                <p class="card-text">Remember your why.</p>
+                <a href="" class="btn btn-primary">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <img src="" class="card-img-top" alt="Blog Post 4">
+              <div class="card-body">
+                <h5 class="card-title">Blog Post #4</h5>
+                <p class="card-text">True grit and Perserverance</p>
+                <a href="" class="btn btn-primary">Read More</a>
+              </div>
+            </div>
+          </div>
+
       </div>
     </div>
   </section>
