--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tyler Stamm - Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="landingpage.css">
+  <link rel="stylesheet" href="CSS/landingpage.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
