--- a/contactcard.html
+++ b/contactcard.html
@@ -8,7 +8,42 @@
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <style>
+.btn-primary {
+  position: relative;
+  display: inline-block;
+}
 
+.hover-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}
+
+.btn-primary:hover .hover-box {
+  opacity: 0.8;
+}
+
+.hover-box p {
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+  .hover-box p {
+    font-size: 14px;
+  }
+
+    </style>
 </head>
 
 <body>
@@ -20,8 +55,10 @@
         <div class="btn-primary">
             <img src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU"
                 alt="John Tyler Stamm" 
-                class="rounded-circle img-fluid data-bs-toggle=" tooltip" data-bs-placement="top"
-                title="Let's Connect!">
+                class="rounded-circle img-fluid" id="profile-img">
+                <div class="hover-box rounded-circle">
+                    <p>Let's Connect!</p>
+                </div>
         </div>
         <h2 class="text-center mt-2"
             style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 75px;">Tyler Stamm
@@ -35,9 +72,6 @@
             <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
         </div>
     </div>
-    <script>const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-    </script>
 </body>
 
 </html>
