--- a/contactcard.html
+++ b/contactcard.html
@@ -12,6 +12,7 @@
 .btn-primary {
   position: relative;
   display: inline-block;
+  width: 250px;
 }
 
 .hover-box {
@@ -39,17 +40,15 @@
   font-size: 18px;
 }
 
-  .hover-box p {
-    font-size: 14px;
-  }
+
 
     </style>
 </head>
 
 <body>
-    <img class="bg-img"
+    <img class="bg-img container-fluid"
         src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-        alt="background gradient" style="width: 100%; height: 2000px;">
+        alt="background gradient" style="min-height: 900px;">
     <div class="position-absolute top-50 start-50 translate-middle">
 
         <div class="btn-primary">
@@ -61,9 +60,9 @@
                 </div>
         </div>
         <h2 class="text-center mt-2"
-            style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 75px;">Tyler Stamm
+            style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 50px;">Tyler Stamm
         </h2>
-        <div class="icons mb-2 mt-2 text-center" style="font-size: 75px;">
+        <div class="icons mb-2 mt-2 text-center" style="font-size: 50px;">
             <a href="https://github.com/JTSTAM02" target="_blank" fill="currentColor"><i class="bi bi-github"></i></a>
             <a href="mailto:tyler.stamm1313@gmail.com" target="_blank" fill="currentColor"><i
                     class="bi bi-envelope"></i></a>
