--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -1,3 +1,13 @@
-### Technical Article-Pseudocode Is Life
+### Pseudocode Is Life
+
+##Intro
+
+Pseudocode is the life-blood of strong code. Whter you are creating a huge database in Python, or ustilizing JavaScript to create a hang-man game, pseudocode is your instruction manual. It exists as a guide to your code, as well as aiding in the organization and structure of D.R.Y. code. Pseudocode is the first step in creating quality software, and is absolutely necessary in terms of thinking through each step of the problem that is computational thinking/problem-solving.
+
+## What is It?
+
+Pseudocode, by definition, is "a notation resembling a simplified programming language, used in program design." In normal language, this means that pseudocode is writing out your code in normal English. However, pseudocode is more than jsut writing out your ocde. It is thinking through the whole process of coding, from any questions you have, to project management basics (think MoSCoW), to the organizations of objects and functions, and more. For example, this past week I was given a project to design a functional Ti-Tac-Toe board. In the assignment, we always start with pseudocode. Te first thing I did when I started my pseudocode was the first thing I think to myself: Question! Whatever questions I had about the project (how to display the UI, how to show symbols upon click, what functions I needed, etc.) were all quickly lsited out. This serves as a great guide for your thinking and ensures you have a clear image of what you understand and what you do not.
+
+
 
 
