--- a/styleguide.html
+++ b/styleguide.html
@@ -1,5 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Card</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <style>
+.btn-primary {
+  position: relative;
+  display: inline-block;
+  width: 250px;
+}
+
+.hover-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}
+
+.btn-primary:hover .hover-box {
+  opacity: 0.8;
+}
+
+.hover-box p {
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+
+
+    </style>
+</head>
+
+<body>
+    <img class="bg-img container-fluid"
+        src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
+        alt="background gradient" style="min-height: 900px;">
+    <div class="position-absolute top-50 start-50 translate-middle">
+
+        <div class="btn-primary">
+            <img src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU"
+                alt="John Tyler Stamm" 
+                class="rounded-circle img-fluid" id="profile-img">
+                <div class="hover-box rounded-circle">
+                    <p>Let's Connect!</p>
+                </div>
+        </div>
+        <h2 class="text-center mt-2"
+            style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 50px;">Tyler Stamm
+        </h2>
+        <div class="icons mb-2 mt-2 text-center" style="font-size: 50px;">
+            <a href="https://github.com/JTSTAM02" target="_blank" fill="currentColor"><i class="bi bi-github"></i></a>
+            <a href="mailto:tyler.stamm1313@gmail.com" target="_blank" fill="currentColor"><i
+                    class="bi bi-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/john-tyler-stamm/" target="_blank" fill="currentColor"><i
+                    class="bi bi-linkedin"></i></a>
+            <a href="tel:502-648-8571" target="_blank" fill="currentColor"><i class="bi bi-telephone-outbound"></i></a>
+        </div>
+    </div>
+    
+</body>
+
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +91,7 @@
     <div class="container blog-teaser">
         <div class="row">
             <div class="col-12"
-                <p>insertHTML here</p>
+                <p>Check Out my Blog!</p>
         </div>
     </div>
     <br>
@@ -19,7 +99,7 @@
     <div class="container blog-post">
         <div class="row">
             <div class="col-12">
-                <P>Insert HTML here</P>
+                <P>Here is my Blog Post</P>
             </div>
         </div>
     </div>
@@ -28,10 +108,10 @@
     <div class=”container contact-card-wrapper”>
 	<div class=”row”>
 		<div class=”col-12”
-			<your HTML elements>
+			
 		</div>
 	</div>
 </div>
 
 </body>
-</html>
+</html> -->
