--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="card-body">
               <h5 class="card-title">Blog Post #2</h5>
               <p class="card-text">When the going gets tough, the tough get going.</p>
-              <a href="blogWeek2.md" class="btn btn-primary">Read More</a>
+              <a href="https://jtstam02.github.io/blogWeek2.md" class="btn btn-primary">Read More</a>
             </div>
           </div>
         </div>
