Updating styling for blog posts

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a class="nav-link" href="#about">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#projectsLandingPage">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#blogs">Blogs</a>
+            <a class="nav-link" href="#blogsLandingPage">Blogs</a>
           </li>
         </ul>
       </div>
@@ -68,7 +68,7 @@
             <div class="card-body">
               <h5 class="card-title">Blog #1</h5>
               <p class="card-text">Click here to learn about my first week of Bootcamp.</p>
-              <a href="blogWeek1.md" class="btn btn-primary">Read More</a>
+              <a href="blogWeek1.html" class="btn btn-primary">Read More</a>
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
             <div class="card-body">
               <h5 class="card-title">Blog Post #2</h5>
               <p class="card-text">When the going gets tough, the tough get going.</p>
-              <a href="https://jtstam02.github.io/blogWeek2.md" class="btn btn-primary">Read More</a>
+              <a href="https://jtstam02.github.io/blogWeek2.html" class="btn btn-primary">Read More</a>
             </div>
           </div>
         </div>
@@ -89,7 +89,7 @@
               <div class="card-body">
                 <h5 class="card-title">Blog Post #3</h5>
                 <p class="card-text">Remember your why.</p>
-                <a href="blogWeek3.md" class="btn btn-primary">Read More</a>
+                <a href="blogWeek3.html" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
               <div class="card-body">
                 <h5 class="card-title">Blog Post #4</h5>
                 <p class="card-text">True grit and Perserverance</p>
-                <a href="blogWeek4.md" class="btn btn-primary">Read More</a>
+                <a href="blogWeek4.html" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
