--- a/blogWeek1.html
+++ b/blogWeek1.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog #1</title>
+  <link rel="stylesheet" href="CSS/blogstyling.css">
+
 </head>
 <body>
   <h1>Welcome to Bootcamp!</h1>
