--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
         <li class="nav-item">
-            <a class="nav-link" href="#about">About Me</a>
+            <a class="nav-link" href="AboutMe.html">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projectsLandingPage">Projects</a>
