Fixed bug with nav bar

--- a/blogWeek1.html
+++ b/blogWeek1.html
@@ -4,10 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog #1</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="CSS/blogstyling.css">
 
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="AboutMe.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projectsLandingPage">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#blogsLandingPage">Blogs</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <h1>Welcome to Bootcamp!</h1>
   <img src="img/SadCoder.jpeg" alt="Stressed Programmer">
   <p>The first week of this bootcamp was full of ups and downs. Trying to finish one career and start the journey to another in the same week is mentally and physically exhausting. I definitely slept soundly every night. I had some great moments of success this week. I was stuck on some git commands for a long time, trying to authorize my account for hours. Running through tutorial after tutorial trying to find my error, or what I had to do to sync up my local repository and Github's. You can only press this Git commands for so long! Here's a few I've learned this week:
