--- a/blogWeek3.html
+++ b/blogWeek3.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog #3</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="CSS/blogstyling.css">
-
 </head>
-<body>
+<body></body>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="AboutMe.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projectsLandingPage">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#blogsLandingPage">Blogs</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <h1>Sprint 1-Welcome to the Real Race</h1> 
     <p>This week has been challenging. From atomic design to Bootstrap, to higher level analysis of Javascript and state, this week has thrown an enormous amount of fresh content and higher level problem solving and analysis that I am used to. In many ways, I felt successful this week. I worked hard, often working late after my wife had gone to sleep. I took avid notes and tried to complete as much as I could apart from resources like Google and Stack Overflow. Yet, I recognize my lack of competence. The more I study Javascript, the more aware I am of my own shortcomings. Solving simple if/else statements in codewars can be a great confidence booster, until you click on a random one on a Friday night and am blown away by the intricacies of it all. I have so much to learn, and I feel there is not enough time in the bootcamp (or the day, for that matter) to understand it all. Ultimately, time has helped me back. Time and my own lack of awareness. 
 </p>
