--- a/blog-post-sprint-3.html
+++ b/blog-post-sprint-3.html
@@ -4,9 +4,34 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Technical Blog Post-Pseudocode</title>
-<link rel="stylesheet" href="CSS/blogstyling.css">
-</head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="CSS/blogstyling.css"></head>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+	<div class="container">
+	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav ml-auto">
+		  <li class="nav-item">
+			<a class="nav-link" href="index.html">Home</a>
+		  </li>
+		<li class="nav-item">
+			<a class="nav-link" href="AboutMe.html">About Me</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="#projectsLandingPage">Projects</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="#blogsLandingPage">Blogs</a>
+		  </li>
+		</ul>
+	  </div>
+	</div>
+  </nav>
 <body>
+	
 	<div class="container-fluid">
 	<h1>Pseudocode Is Life</h1>
 
