--- a/blogWeek2.html
+++ b/blogWeek2.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog #2</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="CSS/blogstyling.css">
-
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="AboutMe.html">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#projectsLandingPage">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#blogsLandingPage">Blogs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
 <h1>Competence before Confidence</h1>
 <p>Early in the bootcamp, our instructer gave a presentation about the role of confidence and competence throughout this summer journey we would take. He spoke about how our confidence would rise at first, but over time our confidence would dwindle. However, he argued that our competence would grow as our confidence shrunk. The idea seemed perplexing at the time. After all, wouldn't we grow in confidence as our skills developed? Would the analysis of high level programming languages prove to be beneficial in helping us believe we can code? The short answer is uh no!
