Project pages initial work

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="AboutMe.html">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projectsLandingPage">Projects</a>
+            <a class="nav-link" href="Projects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#blogsLandingPage">Blogs</a>
@@ -44,7 +44,7 @@
           <div class="col-sm-8 m-2 centered middle-top">
 
                 <img alt="My wife, my puppy, and myself" 
-                src="https://scontent.flex1-1.fna.fbcdn.net/v/t39.30808-6/285069147_10210246318232141_7262627262845953222_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=wzGnFQbGDosAX_73Mpb&_nc_ht=scontent.flex1-1.fna&oh=00_AfBNFDiXKaECGnqSf_HdlD9vjJ2ekWSWeB2Spc76kCeH9w&oe=64A2203A"
+                src="https://scontent.flex1-1.fna.fbcdn.net/v/t39.30808-6/285069147_10210246318232141_7262627262845953222_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=LidiIWNfhkIAX-qKjvv&_nc_ht=scontent.flex1-1.fna&oh=00_AfDgND5KyhzaEZeaMwA3067-KtVu2hw7PFMWC1tKl6uXeQ&oe=64AC037A"
                 class="img-fluid p-4" style="max-height: 400px;">
                 <h2>About Me</h2>
                 <p>Hello there! A little bit about me: I'm a full stack web developer with an interest in creating highly engaging, fun websites of all kinds. I enjoy working on projects during my free time, to create the very best products for the future. Outside of my work, I love spending time with my wife and family, playing or coaching basketball, or cheering on my hometown Louisville Cardinals.</p>
