--- a/blogWeek2.html
+++ b/blogWeek2.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="AboutMe.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#projectsLandingPage">Projects</a>
+                <a class="nav-link" href="Projects.html">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#blogsLandingPage">Blogs</a>
