Fixed image bug

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -46,7 +46,7 @@
           <div class="col-sm-8 m-2 centered middle-top">
 
                 <img alt="My wife, my puppy, and myself" 
-                src=""
+                src="img/Mills, Blu, and Me.jpeg"
                 class="img-fluid p-4" style="max-height: 400px;">
                 <h2>About Me</h2>
                 <p>Hello there! A little bit about me: I'm a full stack web developer with an interest in creating highly engaging, fun websites of all kinds. I enjoy working on projects during my free time, to create the very best products for the future. Outside of my work, I love spending time with my wife and family, playing or coaching basketball, or cheering on my hometown Louisville Cardinals.</p>
