--- a/contactcard.html
+++ b/contactcard.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="CSS/blogstyling.css">
     <style>
+      h2 {
+        color: cyan;
+      }
 .btn-primary {
   position: relative;
   display: inline-block;
@@ -42,8 +45,6 @@
   font-size: 18px;
 }
 
-
-
     </style>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark">
@@ -63,7 +64,7 @@
             <a class="nav-link" href="Projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#blogsLandingPage">Blogs</a>
+            <a class="nav-link" href="contactcard.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -71,16 +72,13 @@
   </nav>
 
 <body>
-    <img class="bg-img container-fluid"
-        src="https://images.unsplash.com/photo-1533035353720-f1c6a75cd8ab?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGxhaW4lMjBjb2xvcnN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60"
-        alt="background gradient" style="min-height: 900px;">
+    
     <div class="position-absolute top-50 start-50 translate-middle">
-
         <div class="btn-primary">
             <img src="https://media.licdn.com/dms/image/D5603AQFcVA1iDwWQiA/profile-displayphoto-shrink_800_800/0/1686921358765?e=1692230400&v=beta&t=yHNdaPgOonMz2B96xubnLvS6sSU-kyKWXw2wXdh4IkU"
                 alt="John Tyler Stamm" 
                 class="rounded-circle img-fluid" id="profile-img">
-                <div class="hover-box rounded-circle">
+                <div class=" img-fluid hover-box rounded-circle">
                     <p>Let's Connect!</p>
                 </div>
         </div>
