Updated projects page

--- a/Projects.html
+++ b/Projects.html
@@ -52,23 +52,34 @@ footer {
       <hr>
 
       <div class="accordion" id="accordionPanelsStayOpen">
+
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-        My Weather App</button>
+        MovieMixer</button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-            <div class="accordion-body">Click <a href="https://jtstam02.github.io/weather-app/" target="_blank">here</a> to see my live Weather App. It fetches data from a free API that can display weather condiitons all across the nation. Give it a try! If you wanna see the code that makes it happen, check out this <a href="https://github.com/JTSTAM02/weather-app" target="_blank">GitHub repository.</a></div>
+            <div class="accordion-body">Click <a href="https://capstone-front-akx29f5uf-jtstam02.vercel.app/" target="_blank">here</a> to see my live MovieMixer, deployed by Vercel and Google Cloud. This full stack application allows you to register for an account, and get a random movie based upon unqiue filters. Try it out!</div>
           </div>
         </div>
 
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        My Weather App</button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse">
+            <div class="accordion-body">Click <a href="https://jtstam02.github.io/weather-app/" target="_blank">here</a> to see my live Weather App. It fetches data from a free API that can display weather condiitons all across the nation. Give it a try! If you wanna see the code that makes it happen, check out this <a href="https://github.com/JTSTAM02/weather-app" target="_blank">GitHub repository.</a></div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
               Tic-Tac-Toe!
             </button>
           </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body"> <a href="https://github.com/JTSTAM02/tic-tac-toe">Go Play!</a><br>
                 Find a friend and enjoy the classic game! I created this one specifically designed for two players, so you and a friend or loved one can compete! (HINT: start in the middle if you can. It's easier.) <br><a href="https://github.com/JTSTAM02/tic-tac-toe" target="_blank">Repo</a></div>
           </div>
@@ -76,11 +87,11 @@ footer {
 
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
               I Can Read Your Mind!
             </button>
           </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body"><a href="https://jtstam02.github.io/mind-reader/" target="_blank">This project</a> is meant to blow your mind. Follow the directions closely, and do not skip any. If you accidentely click past one (let's face it, mistakes happen), click refresh and start again. How do you think I did it?<br><a href="https://github.com/JTSTAM02/mind-reader" target="_blank">For the Nerds Like Me</a></div>
           </div>
         </div>
