--- a/Projects.html
+++ b/Projects.html
@@ -59,7 +59,7 @@ footer {
         MovieMixer</button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-            <div class="accordion-body">Click <a href="https://capstone-front-akx29f5uf-jtstam02.vercel.app/" target="_blank">here</a> to see my live MovieMixer, deployed by Vercel and Google Cloud. This full stack application allows you to register for an account, and get a random movie based upon unqiue filters. Try it out!</div>
+            <div class="accordion-body">Click <a href="https://capstone-front-akx29f5uf-jtstam02.vercel.app/" target="_blank">here</a> to see my live MovieMixer, deployed by Vercel and Google Cloud. This full stack application allows you to register for an account, and get a random movie based upon unique filters. Try it out!</div>
           </div>
         </div>
 
