Updated About Me and fixed Projects Link Bug

--- a/Projects.html
+++ b/Projects.html
@@ -80,7 +80,7 @@ footer {
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body"> <a href="https://github.com/JTSTAM02/tic-tac-toe">Go Play!</a><br>
+            <div class="accordion-body"> <a href="https://jtstam02.github.io/tic-tac-toe/" target="_blank">Go Play!</a><br>
                 Find a friend and enjoy the classic game! I created this one specifically designed for two players, so you and a friend or loved one can compete! (HINT: start in the middle if you can. It's easier.) <br><a href="https://github.com/JTSTAM02/tic-tac-toe" target="_blank">Repo</a></div>
           </div>
         </div>
@@ -103,7 +103,7 @@ footer {
             </button>
           </h2>
           <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body"> <a href="https://jtstam02.github.io/to-do-list/">To-Do-List</a><br>
+            <div class="accordion-body"> <a href="https://jtstam02.github.io/to-do-list/" target="_blank">To-Do-List</a><br>
                 Need a new to do list and the Reminders app just not cutting it? Try out my design! Includes options to complete all and activate all. It even saves your list items if you accidentely x out of the page! <br><a href="https://github.com/JTSTAM02/to-do-list" target="_blank">Repo</a></div>
           </div>
         </div>
