--- a/AboutMe.html
+++ b/AboutMe.html
@@ -48,7 +48,7 @@
                 <h2>About Me</h2>
                 <p>Hello there! A little bit about me: I'm a full stack web developer with an interest in creating highly engaging, fun websites of all kinds. I enjoy working on projects during my free time, to create the very best products for the future. Outside of my work, I love spending time with my wife and family, playing or coaching basketball, or cheering on my hometown Louisville Cardinals.</p>
                 <br>
-                <p>In my previous career, I taught history in the public school system. I deeply value education and its place in our society, but ultimately grew unhappy and wanted to seek a job in a career that utilized my skills and interests. I had always been fascinated with technology and the constant growth of the industry. I love learning new programming languages and gathering knowledge from sources like modern AI systems and online blogs. </p>
+                <p>In my previous career, I taught history in the public school system. I deeply value education and its place in our society, but ultimately wanted a career that better utilized my technical skills and interests. I had always been fascinated with technology and the constant growth of the industry. I love learning new programming languages and gathering knowledge from sources like modern AI systems and online blogs. </p>
                 <br>
                 <p>Want to connect? I am currently looking for new opportunities in software development. If you or your company is hiring-<a href="mailto:tyler.stamm1313@gmail.com">I'd love to know!</a> </p>
           </div>
